[package]
name = "inoreader_house_cleaning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
percent-encoding = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# NOTE: dotenv is unmaintained (RUSTSEC-2021-0141), replaced with dotenvy
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
